--- a/realizations/style.css
+++ b/realizations/style.css
@@ -53,7 +53,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -473,7 +472,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
+  grid-gap: 20px;
 }
 
 .form__rate {
@@ -702,6 +701,7 @@
 }
 
 .navigation-icons__link {
+  padding-right: 15px;
   display: block;
   text-align: center;
   color: #211d1e;
